--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,7 @@
         <link rel="apple-touch-icon" href="{{ url_for('static', filename='apple-touch-icon.png') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.min.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-        <script>
-          var sub = document.getElementById("check");
-          sub.click()
-        </script>
+
         <!--[if lt IE 9]>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
             <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
@@ -22,20 +19,34 @@
     </head>
     <body>
         <div class="container">
-          <img src="{{ url_for('static', filename='img/logo.png') }}" class="logo">
-          <div class="title">Is <input type="text" value="{{ host }}" placeholder="google.it"> down? <button id="check" type="submit" onsubmit="check();">Check it</a></div>
-          {% block content %}
+          <img src="{{ url_for('static', filename='img/logo.png') }}" width="64" height="64" class="logo">
+          <div class="title">IS IT DOWN?</div>
+          <form>
+            <input id="host" type="text" value="{{ host }}" placeholder="google.it">
+            <button id="check" type="submit" onclick="return checkHost()">Check it</button>
 
+          </form>
+          {% block content %}
           {% endblock %}
         </div>
+
         <div class="about">
           <p>With this site you can easily check if a site is down or if you have a connection problem.</p>
         </div>
         <footer>
           This site is open source | Developed with &lt;3 by <a href="http://twitter.com/federico_ponzi">@FedericoPonzi</a>
         </footer>
-
         <!--script src="js/main.js"></script-->
+        <script>
+        function checkHost(){
+            console.log("Called.");
+            var domain = '/' + document.getElementById('host').value;
+            console.log(domain)
+            window.location = domain;
+            console.log(window.location)
+            return false;
+          };
+        </script>
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
