Aggiunge alt a logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <div class="container">
-          <img src="{{ url_for('static', filename='img/logo.png') }}" width="64" height="64" class="logo">
+          <img src="{{ url_for('static', filename='img/logo.png') }}" width="64" height="64" alt="logo" class="logo">
           <div class="title">IS IT DOWN?</div>
           <form>
             <input id="host" type="text" value="{{ host }}" placeholder="google.it">
