--- a/templates/check.html
+++ b/templates/check.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
 {% block title %}Check if {{ host }} is down{% endblock %}
 {% block content %}
-  <h2>The site is {{ pingres }}</h2>
+  <h2>{{ host }} is {{ pingres }}!</h2>
 {% endblock %}
