Adds a new shiny logo, fix the last check query

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -83,7 +83,9 @@ body {
   font-size: 3em;
   letter-spacing: 2px;
 }
-
+.logo{
+  width:100px;
+}
 form {
   display: inline-block;
   border-radius: 5px;
