--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     </head>
     <body>
         <div class="container">
-          <a href="/" title="is it down?"><img src="{{ url_for('static', filename='img/logo.png') }}" width="64" height="64" alt="logo" class="logo"></a>
+          <a href="/" title="is it down?"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="logo"></a>
           <div class="title">IS IT DOWN?</div>
           <form>
             <input id="host" type="text" value="{{ host }}" placeholder="google.it">
