Edited description og

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon-32x32.png') }}" sizes="32x32" />
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon-16x16.png') }}" sizes="16x16" />
         <meta property="og:type" content="website">
-        <meta property="og:title" content="is it down? Check if a site is down or not">
-        <meta property="og:description" content="With this site you can easily check if another site is down or not: find out if you have a connection problem.">
+        <meta property="og:title" content="Is it down? Check if a site is down">
+        <meta property="og:description" content="Check if a site is really down and find out if you have a connection problem.">
         <meta property="og:url" content="http://isitdown.site/">
         <meta property="og:image" content="http://isitdown.site/static/img/logo.png">
         <meta property="og:site_name" content="Isitdown.site"
