adds some more possible troubleshooting

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,8 @@
           <p>With this site you can easily check if a site is down or if you have a connection problem.</p>
           <p>The most common problems are:
             <ul>
+              <li>Browser problem: Try clearing your browser cache. Hit ctrl+shift+r. Also, you can try to disable your ad-blocker and refresh the page.</li>
+              <li>Router's problem: Restart your router.</li>
               <li>DNS Problem: It may happen that your host blocks that domain. Try to use an <a href="https://www.opendns.com/setupguide/" title="Opendns">alternative dns</a>.</li>
             </ul>
           </p>
