--- a/static/css/main.css
+++ b/static/css/main.css
@@ -216,11 +216,11 @@ code {
 /* ==========================================================================
    Media Queries
    ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-
+@media only screen and (max-width: 512px){
+  code{
+    font-size:0.9em;
+  }
 }
-
 @media print,
        (-o-min-device-pixel-ratio: 5/4),
        (-webkit-min-device-pixel-ratio: 1.25),
