--- a/static/css/main.css
+++ b/static/css/main.css
@@ -211,6 +211,7 @@ a {
 }
 code {
     background-color: rgba(255, 255, 0, 0.15);
+	word-wrap: break-word;
 }
 
 /* ==========================================================================
