Adds an explanation of how isitdown works, removes useless files

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,6 +73,10 @@
             </ul>
           </p>
         </div>
+		<h3>How does it works?</h3>
+		<div>
+			<p>Isitdown.site will try to connect to port 80 on the address requested and report the request result. The site will appear as online, even if it returns a bad response.</p> 
+		</div>
       </section>
     </div>
     <div class="col-xs-12 col-s-12 col-md-4 col-lg-4">
