--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
             </ul>
           </p>
         </div>
-		<h3>How does it works?</h3>
+		<h3>How does it work?</h3>
 		<div>
 			<p>Isitdown.site will try to connect to port 80 on the address requested and report the request result. The site will appear as online, even if it returns a bad response.</p> 
 		</div>
